--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "csv-parse": "^3.1.3",
+    "lodash": "^4.17.11",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
