--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     }
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "csv-parse": "^3.1.3",
     "lodash": "^4.17.11",
