--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "csv-parse": "^3.1.3",
+    "encoding-japanese": "^1.0.29",
     "lodash": "^4.17.11",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
